* wp-content/themes/wptemple/sass/_layout.scss: Fixed "Read More" button   on mobile

--- a/wp-content/themes/wptemple/sass/_layout.scss
+++ b/wp-content/themes/wptemple/sass/_layout.scss
@@ -67,14 +67,13 @@ main.content {
 
     .grid-post-row {
 	@include clearfix;
-	max-height: 570px;
+	height: auto;
     }
     
     .grid-post-area {
         background-color: #e9e9e9;
         margin-bottom: 30px;
-	min-height: 540px;
-	max-height: 100%;
+	height: auto;
 	position: relative;
 
 	.grid-post-upper {
@@ -121,10 +120,9 @@ main.content {
             text-align: center;
             margin: 20px 0 20px 0;
             padding: 20px 0 20px 0;
-	    position: absolute;
-	    bottom: 10px;
-		
-		
+	    clear: both;
+	    
+	    
 	    a {
                 background-color: #a385be;
                 padding: 15px 20px 15px 20px;
