--- a/wp-content/themes/wptemple/style.css
+++ b/wp-content/themes/wptemple/style.css
@@ -492,7 +492,7 @@ main.content {
     content: "";
     display: table; }
   main.content .grid-post-row {
-    max-height: 570px; }
+    height: auto; }
     main.content .grid-post-row::after {
       clear: both;
       content: "";
@@ -500,8 +500,7 @@ main.content {
   main.content .grid-post-area {
     background-color: #e9e9e9;
     margin-bottom: 30px;
-    min-height: 540px;
-    max-height: 100%;
+    height: auto;
     position: relative; }
     main.content .grid-post-area .grid-post-upper {
       position: relative;
@@ -533,8 +532,7 @@ main.content {
       text-align: center;
       margin: 20px 0 20px 0;
       padding: 20px 0 20px 0;
-      position: absolute;
-      bottom: 10px; }
+      clear: both; }
       main.content .grid-post-area .grid-post-read-more a {
         background-color: #a385be;
         padding: 15px 20px 15px 20px;
